--- a/projects.html
+++ b/projects.html
@@ -7,8 +7,9 @@
 </head>
 <body>
     <h1>Projects page</h1>
+    <h4>header 4</h4>
     <div class="projects">
-        
+
     </div>
 </body>
 </html>
