add h4 index.html

--- a/projects.html
+++ b/projects.html
@@ -8,8 +8,6 @@
 <body>
     <h1>Projects page</h1>
     <h4>header 4</h4>
-    <div class="projects">
-
-    </div>
+    <div class="projects"></div>
 </body>
 </html>
